fix gallery images stretching during load

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,3 +6,7 @@
     display: block;
     height: 100%;
 }
+
+.objectFit__contain{
+    object-fit: fill !important;
+}
